modified circleci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,10 @@ jobs: # A basic unit of work in a run
             python server.py
           background: true
       - run:
+          name: Wait for APP
+          # preinstalled in circleci/* docker image
+          command: dockerize -wait tcp://127.0.0.1:5000 -timeout 120s
+      - run:
           name: Run test
           command: |
             python -m unittest tests.test_api
